--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -13,8 +13,10 @@
       <p>Click here to get a random message:</p>
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
+      <p id="demo"></p>
     </div>
-    <button id="button1"> </button>
+    <button id="button1" onmousemove="b1Scroll()" onmouseout="b1Clear()"></button>
+    <p id="about-me"></p>
     <button id="button2"> </button>
     <button id="button3"> </button>
     <button id="button4"> </button>
