add youtube html and css files and third button in youtube.html link

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -16,7 +16,7 @@
     </div>
     <button id="button1"> </button>
     <button id="button2"> </button>
-    <button id="button3"> </button>
+    <a href="youtube.html"><img src="/images/hair3.png" id="button3"></a>
     <button id="button4"> </button>
   </body>
 </html>
