added facts page html and css files and wrapped fourth button in the link

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -18,5 +18,6 @@
     <button id="button2"> </button>
     <button id="button3"> </button>
     <button id="button4"> </button>
+    <a href="facts.html"><img src="/images/hair4.png" id="button4"></a>
   </body>
 </html>
