--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -15,6 +15,7 @@
       <div id="greeting-container"></div>
     </div>
     <button id="button1"> </button>
+    <a href="aboutme.html"><img src="/images/hair1.png" id="button1"></a>
     <button id="button2"> </button>
     <button id="button3"> </button>
     <button id="button4"> </button>
