change styling and functionality of button 1

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -14,7 +14,7 @@
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
     </div>
-    <button id="button1" onmousemove="b1Scroll()" onmouseout="b1Clear()"></button>
+    <a href="aboutme.html"><img src="/images/hair1.png" id="button1" onmousemove="b1Scroll()" onmouseout="b1Clear()"></a>
     <p id="about-me"></p>
     <button id="button2"> </button>
     <button id="button3"> </button>
