made scroll and clear functions more dynamic

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -14,7 +14,7 @@
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
     </div>
-    <button id="button1" onmousemove="b1Scroll()" onmouseout="b1Clear()"></button>
+    <button id="button1" onmousemove="labelScroll('about-me', 'about me')" onmouseout="labelClear('about-me')"></button>
     <p id="about-me"></p>
     <button id="button2"> </button>
     <button id="button3"> </button>
