modified index.html and dataservlet.java to say 'hello miah'

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,16 +7,10 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <div id="content">
-      <h1>Miah's Portfolio</h1>
-      
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
-    </div>
     <button id="button1"> </button>
     <button id="button2"> </button>
     <button id="button3"> </button>
     <button id="button4"> </button>
+    <p>Click <a href="/data">here</a> to go to the data page.</p>
   </body>
 </html>
