use fetch to generate message after clicking button

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -11,6 +11,7 @@
     <button id="button2"> </button>
     <button id="button3"> </button>
     <button id="button4"> </button>
-    <p>Click <a href="/data">here</a> to go to the data page.</p>
+    <button onclick="getHello()">Say Hi!</button>
+    <h1 id='hello-container'></h1>
   </body>
 </html>
