--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -11,7 +11,9 @@
     <button id="button2"> </button>
     <button id="button3"> </button>
     <button id="button4"> </button>
-    <button onclick="getHello()">Say Hi!</button>
-    <h1 id='hello-container'></h1>
+    <button onclick="getComments()">Get some Comments!</button>
+    <h1 id='comment1'></h1>
+    <h1 id='comment2'></h1>
+    <h1 id='comment3'></h1>
   </body>
 </html>
