--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -16,7 +16,7 @@
     </div>
     <button id="button1"> </button>
     <button id="button2"> </button>
-    <a href="cs-page.html"><img src="/images/hair2.png" id="button2"></a>
+    <a href="cs-page.html"><img src="/images/hair2.png" id="cs-page-image-link" alt="hair puffs"></a>
     <button id="button3"> </button>
     <button id="button4"> </button>
   </body>
