--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -16,7 +16,7 @@
     </div>
     <button id="button1"> </button>
     <button id="button2"> </button>
-    <a href="youtube.html"><img src="/images/hair3.png" id="button3"></a>
+    <a href="youtube.html"><img src="/images/hair3.png" id="youtube-page-image-link" alt="high puff"></a>
     <button id="button4"> </button>
   </body>
 </html>
