--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -18,6 +18,6 @@
     <button id="button2"> </button>
     <button id="button3"> </button>
     <button id="button4"> </button>
-    <a href="facts.html"><img src="/images/hair4.png" id="button4"></a>
+    <a href="facts.html"><img src="/images/hair4.png" id="funfact-page-image-link" alt="afro"></a>
   </body>
 </html>
