--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -14,11 +14,24 @@
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
     </div>
-    <a href="aboutme.html"><img src="/images/hair1.png" id="button1" onmousemove="b1Scroll()" onmouseout="b1Clear()"></a>
-    <p id="about-me"></p>
-    <a href="youtube.html"><img src="/images/hair3.png" id="youtube-page-image-link" alt="high puff"></a>
-    <a href="cs-page.html"><img src="/images/hair2.png" id="cs-page-image-link" alt="hair puffs"></a>
-    <a href="facts.html"><img src="/images/hair4.png" id="funfact-page-image-link" alt="afro"></a>
+
+    <div id='home-buttons'>
+        <a href="aboutme.html">
+            <img src="/images/hair1.png" id="aboutme-page-image-link" 
+            onmousemove="labelScroll('about-me', 'about me')" 
+            onmouseout="labelClear('about-me-label')">
+        </a>
+        <p id="about-me-label"></p>
+        <a href="youtube.html">
+            <img src="/images/hair3.png" id="youtube-page-image-link" alt="high puff">
+        </a>
+        <a href="cs-page.html">
+            <img src="/images/hair2.png" id="cs-page-image-link" alt="hair puffs">
+        </a>
+        <a href="facts.html">
+            <img src="/images/hair4.png" id="funfact-page-image-link" alt="afro">
+        </a>
+    </div>
     <button onclick="getHello()">Say Hi!</button>
     <h1 id='hello-container'></h1>
   </body>
