add javscript functionality to the second button

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -17,16 +17,19 @@
 
     <div id='home-buttons'>
         <a href="aboutme.html">
-            <img src="/images/hair1.png" id="aboutme-page-image-link" 
-            onmousemove="labelScroll('about-me', 'about me')" 
-            onmouseout="labelClear('about-me-label')">
+            <img src="/images/hair1.png" id="aboutme-page-image-link" alt="short hair"
+            onmousemove="labelScroll('about-me-image-label', 'about me')" 
+            onmouseout="labelClear('about-me-image-label')">
         </a>
-        <p id="about-me-label"></p>
+        <p id="about-me-image-label"></p>
+        <a href="cs-page.html">
+            <img src="/images/hair2.png" id="cs-page-image-link" alt="hair puffs"
+            onmousemove="labelScroll('cs-page-image-label', 'CS')"
+            onmouseout="labelClear('cs-page-image-label')">
+        </a>
+        <p id="cs-page-image-label"></p>
         <a href="youtube.html">
             <img src="/images/hair3.png" id="youtube-page-image-link" alt="high puff">
-        </a>
-        <a href="cs-page.html">
-            <img src="/images/hair2.png" id="cs-page-image-link" alt="hair puffs">
         </a>
         <a href="facts.html">
             <img src="/images/hair4.png" id="funfact-page-image-link" alt="afro">
