add functionality to third button

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -16,21 +16,31 @@
     </div>
 
     <div id='home-buttons'>
+        <!-- About me image link and label. -->
         <a href="aboutme.html">
             <img src="/images/hair1.png" id="aboutme-page-image-link" alt="short hair"
             onmousemove="labelScroll('about-me-image-label', 'about me')" 
             onmouseout="labelClear('about-me-image-label')">
         </a>
         <p id="about-me-image-label"></p>
+
+        <!-- CS page image link and label. -->
         <a href="cs-page.html">
             <img src="/images/hair2.png" id="cs-page-image-link" alt="hair puffs"
             onmousemove="labelScroll('cs-page-image-label', 'CS')"
             onmouseout="labelClear('cs-page-image-label')">
         </a>
         <p id="cs-page-image-label"></p>
+
+        <!-- Youtube page link and label. -->
         <a href="youtube.html">
-            <img src="/images/hair3.png" id="youtube-page-image-link" alt="high puff">
+            <img src="/images/hair3.png" id="youtube-page-image-link" alt="high puff"
+            onmousemove="labelScroll('youtube-page-image-label', 'youtube')" 
+            onmouseout="labelClear('youtube-page-image-label')">
         </a>
+        <p id="youtube-page-image-label"></p>
+        
+        <!-- Fun facts page link and label. -->
         <a href="facts.html">
             <img src="/images/hair4.png" id="funfact-page-image-link" alt="afro">
         </a>
