change background color and add home page text

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -7,13 +7,7 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <div id="content">
-      <h1>Miah's Portfolio</h1>
-      
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
-      <div id="greeting-container"></div>
-    </div>
+    <h1 id="home-page-name">Miah K Sanchez</h1>
 
     <div id='home-buttons'>
         <a href="aboutme.html">
