--- a/portfolio/src/main/webapp/youtube.html
+++ b/portfolio/src/main/webapp/youtube.html
@@ -7,8 +7,8 @@
     <script src="youtube_script.js"></script>
   </head>
   <body>
-      <p>What's a youtube video idea you have for me?</p>
-      <form action="/text" method="POST">
+      <form action="/data" method="POST">
+        <p>What's a youtube video idea you have for me?</p>
         <textarea name="user-input">Put your idea here!</textarea>
         <br><br><br>
         <input type="submit" />     
