change paragraph to label

--- a/portfolio/src/main/webapp/youtube.html
+++ b/portfolio/src/main/webapp/youtube.html
@@ -8,7 +8,7 @@
   </head>
   <body>
       <form action="/data" method="POST">
-        <p>What's a youtube video idea you have for me?</p>
+        <label for="user-input">What's a youtube video idea you have for me?</label><br>
         <textarea name="user-input">Put your idea here!</textarea>
         <br><br><br>
         <input type="submit" />     
