add placeholder text

--- a/portfolio/src/main/webapp/youtube.html
+++ b/portfolio/src/main/webapp/youtube.html
@@ -9,7 +9,7 @@
   <body>
       <form action="/data" method="POST">
         <p>What's a youtube video idea you have for me?</p>
-        <textarea name="user-input" required></textarea>
+        <textarea name="user-input" required placeholder="Put your idea here!"></textarea>
         <br><br><br>
         <input type="submit" />     
       </form>
