--- a/portfolio/src/main/webapp/aboutme.html
+++ b/portfolio/src/main/webapp/aboutme.html
@@ -4,5 +4,11 @@
     <meta charset="UTF-8">
     <title>About Me</title>
     <link rel="stylesheet" href="aboutme-style.css">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRHkMYIS5VeVAo7KjInB9wGgzANCBU-Dg"></script>
+    <script src="aboutme_script.js"></script>
   </head>
+  <body onload="createMap();">
+      <h1>About me</h1>
+      <div id="map"></div>
+  </body>
 </html>
