added text so center of map can change for every icon

--- a/portfolio/src/main/webapp/aboutme.html
+++ b/portfolio/src/main/webapp/aboutme.html
@@ -11,6 +11,11 @@
       <h1>About me</h1>
       <div id="map"></div>
       <p> I grew up in <span onclick="changeCenter(40.821520, -73.955770)">Harlem, New York</span> 
-      and I currently attend <span onclick="changeCenter(42.444759, -76.484306)"> Cornell University.</span></p>
+      and I currently attend <span onclick="changeCenter(42.444759, -76.484306)"> Cornell University.</span>
+      Almost all of my family immigrated from <span onclick="changeCenter(18.483402, -69.929611)">the Dominican Republic</span> to the Bronx. I would spend every weekend
+      as a kid with family in <span onclick="changeCenter(40.825770, -73.852760)">Castle Hill</span>. Although I spent most of my summers in DR the first summer that 
+      I never went away to visit family is when I did the Girls Who Code Program at the <span onclick="changeCenter(40.756989, -73.989708)">New York City Microsoft Office</span>.
+      Girls Who Code made me feel like a career in tech was something that could be achieved for me and I will always be
+      grateful for that experience!</p>
   </body>
 </html>
