--- a/portfolio/src/main/webapp/youtube.html
+++ b/portfolio/src/main/webapp/youtube.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Youtube</title>
     <link rel="stylesheet" href="youtube-style.css">
-    <script src="script.js"></script>
+    <script src="youtube_script.js"></script>
   </head>
   <body onload="loadComments()">
       <form action="/data" method="POST">
