make createMarkerImage function which will run everytime an icon is clicked

--- a/portfolio/src/main/webapp/About Me/aboutme.html
+++ b/portfolio/src/main/webapp/About Me/aboutme.html
@@ -17,5 +17,6 @@
       I never went away to visit family is when I did the Girls Who Code Program at the <span onclick="changeCenter(40.756989, -73.989708)">New York City Microsoft Office</span>.
       Girls Who Code made me feel like a career in tech was something that could be achieved for me and I will always be
       grateful for that experience!</p>
+      <img id="marker-image" src="/images/white.jpg">  
   </body>
 </html>
