change directory names to follow guidelines

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -11,28 +11,28 @@
 
     <div id='page-image-links'>
         <!-- About me image link. -->
-        <a href="/About Me/aboutme.html">
+        <a href="/about-me/aboutme.html">
             <img src="/images/hair1.png" id="aboutme-page-image-link" alt="short hair"
             onmousemove="labelScroll('about-me-image-label', 'about me')" 
             onmouseout="labelClear('about-me-image-label')">
         </a>
 
         <!-- CS page image link. -->
-        <a href="/CS/cs-page.html">
+        <a href="/cs/cs-page.html">
             <img src="/images/hair2.png" id="cs-page-image-link" alt="hair puffs"
             onmousemove="labelScroll('cs-page-image-label', 'CS')"
             onmouseout="labelClear('cs-page-image-label')">
         </a>
 
         <!-- Youtube page link and label. -->
-        <a href="/Youtube/youtube.html">
+        <a href="/youtube/youtube.html">
             <img src="/images/hair3.png" id="youtube-page-image-link" alt="high puff"
             onmousemove="labelScroll('youtube-page-image-label', 'youtube')" 
             onmouseout="labelClear('youtube-page-image-label')">
         </a>
 
         <!-- Fun facts page link and label. -->
-        <a href="/Fun Facts/facts.html">
+        <a href="/fun-facts/facts.html">
             <img src="/images/hair4.png" id="funfact-page-image-link" alt="afro"
             onmousemove="labelScroll('funfacts-page-image-label', 'fun facts')" 
             onmouseout="labelClear('funfacts-page-image-label')">
