adjusted google code to fit my theme

--- a/portfolio/src/main/webapp/fun-facts/facts.html
+++ b/portfolio/src/main/webapp/fun-facts/facts.html
@@ -4,5 +4,11 @@
     <meta charset="UTF-8">
     <title>Fun Facts!</title>
     <link rel="stylesheet" href="facts-style.css">
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
+    <script src="facts.js"></script>
   </head>
+  <body>
+      <h1>My favorite color</h1>
+      <div id="color-chart"></div>
+  </body>
 </html>
