add post and get

--- a/portfolio/src/main/webapp/fun-facts/facts.html
+++ b/portfolio/src/main/webapp/fun-facts/facts.html
@@ -7,7 +7,7 @@
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="facts.js"></script>
   </head>
-  <body>
+  <body onload="loadColors()">
       <h1>My favorite color</h1>
       <form action="/colors" method="POST">
           <input type="radio" id="red" name="color" value="red">
